--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,50 @@
-/* место для вашего кода */
+body {
+
+}
+.header {
+display: grid;
+grid-template-columns: 1fr 148px 1fr;
+margin: 92px 49px 96px 51px;
+}
+
+.header__links-list-item {
+color: #000;
+font-family: Raleway;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+display: flex;
+margin-top: 43px;
+margin-bottom: 45px;
+}
+.header_logo {
+width: 148px;
+height: 105px;
+}
+.header__links-list {
+display: flex;
+gap: 32px;
+list-style: circle;
+}
+.header__address {
+margin-left: auto;
+display: flex;
+flex-direction: column;
+font-style: normal;
+color: #000;
+font-family: Raleway;
+font-size: 18px;
+font-weight: 400;
+line-height: 24.3px;
+}
+.address {
+width: 240px;
+height: 49px;
+}
+.header__links-list-item_no-bullit {
+list-style: none;
+}
+.header_menu {
+display: flex;
+}
