--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,12 @@
-body {
 
-}
 .header {
 display: grid;
 grid-template-columns: 1fr 148px 1fr;
-margin: 92px 49px 96px 51px;
+margin: 92px 49px 92px 51px;
+max-width: 1340px;
 }
 
-.header__links-list-item {
+.header__link {
 color: #000;
 font-family: Raleway;
 font-size: 18px;
@@ -27,13 +26,15 @@ display: flex;
 gap: 32px;
 list-style: circle;
 }
+.header__links-list-item {
+text-decoration: underline;
+}
 .header__address {
 margin-left: auto;
 display: flex;
 flex-direction: column;
 font-style: normal;
 color: #000;
-font-family: Raleway;
 font-size: 18px;
 font-weight: 400;
 line-height: 24.3px;
@@ -45,6 +46,251 @@ height: 49px;
 .header__links-list-item_no-bullit {
 list-style: none;
 }
-.header_menu {
+.cover {
+background-image: url(/images/cover.jpg);
+max-width: 1440px;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+position: relative;
+z-index: -1;
+}
+.overlay {
+opacity: 0.6;
+background: #000;
+width: 100%;
+height: 100%;
+position: absolute;
+z-index: 0;
+}
+.cover__title {
+color: #FFF;
+font-size: 100px;
+font-style: normal;
+font-weight: 700;
+line-height: 115px;
+text-transform: uppercase;
+padding: 165px 50px;
 display: flex;
+flex-direction: column;
+gap: 20px;
+position: relative;
+z-index: 1;
+}
+.aligned-text {
+text-align: left;
+}
+.aligned-text_center {
+text-align: center;
+}
+.aligned-text_right {
+text-align: right;
+}
+.letter-spacing-extended {
+letter-spacing: 30px;
+}
+.no-letter-spacing {
+letter-spacing: 0px;
+}
+.cover__description {
+display: flex;
+flex-direction: row;
+justify-content: end;
+align-items: center;
+position: relative;
+z-index: 1;
+}
+.cover__description-text {
+word-spacing: 18px;
+color: #FFF;
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px;
+text-transform: uppercase;
+margin-right: 78px;
+margin-bottom: 62px;
+}
+.bet-button {
+color: #FFF;
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-transform: uppercase;
+background-color: transparent;
+border: 1px solid #FFF;
+padding: 12px 32px;
+margin-right: 50px;
+margin-bottom: 50px;
+}
+.lots__heading {
+color: #000;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+margin-left: 40px;
+margin-bottom: 27px;
+margin-top: 180px;
+}
+.lots {
+max-width: 1340px;
+position: relative;
+margin: 180px 50px;
+}
+.card_type_film {
+background-image: url(/images/card-lot-01.jpg);
+}
+.card_type_book {
+background-image: url(/images/card-lot-02.jpg);
+}
+.card_type_picture {
+background-image: url(/images/card-lot-03.jpg);
+}
+.card__title {
+color: #FFF;
+font-size: 22px;
+font-style: normal;
+font-weight: 700;
+line-height: 120%;
+text-decoration-line: underline;
+text-transform: uppercase;
+position: relative;
+z-index: 1;
+}
+.card__text {
+color: #FFF;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 120%;
+position: relative;
+z-index: 1;
+} 
+.lots__card-list {
+position: relative;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+gap: 25px;
+list-style: none;
+flex-wrap: wrap;
+margin-bottom: 30px;
+}
+.lots__card-list-item {
+flex-grow: 1;
+max-width: 430px;
+min-height: 450px;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+position: relative;
+z-index: -1;
+}
+.card-link {
+display: block;
+height: 100%;
+}
+.card {
+height: 100%;
+display: flex;
+flex-direction: column;
+justify-content:space-between;
+position: relative;
+padding: 50px 40px;
+}
+.lots__look-more-link{
+color: #000;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-decoration: underline;
+margin-left: 40px;
+}
+.about {
+max-width: 1340px;
+margin: 181px 50px;
+}
+.about__column {
+display: grid;
+grid-template-columns: 1fr 2fr;
+column-gap: 25px;
+}
+
+.about__title {
+color: #000;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+margin-bottom: 100px;
+margin-top: 100px;
+}
+.about__text {
+color: #000;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+display: flex;
+flex-direction: column;
+row-gap: 25px;
+}
+.about__logo {
+background-color: #000;
+display: flex;
+width: 240px;
+height: 240px;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+border-radius: 50%;
+margin-left: 95px;
+}
+.about__logo-image {
+width: 148px;
+height: 114px;
+flex-shrink: 0;
+}
+.footer {
+display: grid;
+grid-template-columns: 1fr 149px 1fr;
+max-width: 1340px;
+margin: 180px 50px 90px 50px;    
+}
+.footer_addres {
+display: flex;
+flex-direction: column;
+font-style: normal;
+color: #000;
+font-size: 18px;
+font-weight: 400;
+line-height: 24.3px;   
+}
+.footer__menu-list {
+display: flex;
+flex-direction: column;
+color: #000;
+text-align: center;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+list-style: none;
+}
+.footer__menu-link_active {
+text-decoration: none;
+}
+.footer__menu-link {
+text-decoration: underline;   
+}
+.footer__social-link {
+display: flex;
+width: 240px;
+height: 48px;
+margin-left: auto;
 }
