--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,8 @@ list-style: none;
 .cover {
 background-image: url(../images/cover.jpg);
 max-width: 1440px;
+min-height: 757px;
+flex-shrink: 0;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
