--- a/styles/style.css
+++ b/styles/style.css
@@ -48,8 +48,7 @@ list-style: none;
 .cover {
 background-image: url(../images/cover.jpg);
 max-width: 1440px;
-min-height: 757px;
-flex-shrink: 0;
+height: 757px;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
@@ -71,7 +70,7 @@ font-style: normal;
 font-weight: 700;
 line-height: 115px;
 text-transform: uppercase;
-padding: 165px 50px;
+padding: 165px 50px 105px 50px;
 display: flex;
 flex-direction: column;
 gap: 20px;
@@ -109,8 +108,6 @@ font-style: normal;
 font-weight: 400;
 line-height: 28px;
 text-transform: uppercase;
-margin-right: 78px;
-margin-bottom: 62px;
 }
 .bet-button {
 color: #FFF;
@@ -123,7 +120,7 @@ background-color: transparent;
 border: 1px solid #FFF;
 padding: 12px 32px;
 margin-right: 50px;
-margin-bottom: 50px;
+margin-left: 78px;
 }
 .lots__heading {
 color: #000;
