--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,20 @@
 
+.header,
+.cover,
+.lots,
+.about,
+.footer {
+width: 100%;
+max-width: 1440px;
+margin: auto;
+}
 .header {
 display: grid;
 grid-template-columns: 1fr 148px 1fr;
-margin: 92px 49px 92px 51px;
-max-width: 1340px;
+padding: 92px 49px 92px 51px;
 }
 .header__link {
 color: #000;
-font-family: Raleway;
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
@@ -23,32 +30,33 @@ height: 105px;
 .header__links-list {
 display: flex;
 gap: 32px;
-list-style: circle;
+list-style: none;
 }
 .header__links-list-item {
 text-decoration: underline;
+list-style: circle;
 }
-.header__address {
-margin-left: auto;
+.address {
 display: flex;
 flex-direction: column;
 font-style: normal;
 color: #000;
 font-size: 18px;
 font-weight: 400;
-line-height: 24.3px;
+line-height: 24.3px;   
 }
-.address {
-width: 240px;
-height: 49px;
+.header__address {
+max-width: 240px;
+width: fit-content;
+margin-left: 355px;
 }
-.header__links-list-item_no-bullit {
+.header__links-list-item_no-bullit .header__link {
 list-style: none;
+text-decoration: none;
 }
 .cover {
 background-image: url(../images/cover.jpg);
-max-width: 1440px;
-height: 757px;
+padding: 0px 0px 180px 0px;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
@@ -61,6 +69,7 @@ background: #000;
 width: 100%;
 height: 100%;
 position: absolute;
+inset: 0;
 z-index: 0;
 }
 .cover__title {
@@ -134,9 +143,8 @@ margin-bottom: 27px;
 margin-top: 180px;
 }
 .lots {
-max-width: 1340px;
 position: relative;
-margin: 180px 50px;
+padding: 0px 50px 181px 50px;
 }
 .card_type_film {
 background-image: url(../images/card-lot-01.jpg);
@@ -178,14 +186,15 @@ flex-wrap: wrap;
 margin-bottom: 30px;
 }
 .lots__card-list-item {
+width: 430px;
 flex-grow: 1;
-max-width: 430px;
 min-height: 450px;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
 position: relative;
 z-index: -1;
+flex-shrink: 0;
 }
 .card-link {
 display: block;
@@ -205,12 +214,10 @@ font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-text-decoration: underline;
 margin-left: 40px;
 }
 .about {
-max-width: 1340px;
-margin: 181px 50px;
+padding: 0px 50px 180px 50px;
 }
 .about__column {
 display: grid;
@@ -256,38 +263,36 @@ flex-shrink: 0;
 .footer {
 display: grid;
 grid-template-columns: 1fr 149px 1fr;
-max-width: 1340px;
-margin: 180px 50px 90px 50px;
+padding: 0px 50px 90px 50px;
 }
 .footer_addres {
-display: flex;
-flex-direction: column;
-font-style: normal;
-color: #000;
-font-size: 18px;
-font-weight: 400;
-line-height: 24.3px;
+max-width: 240px;
+width: fit-content;
+margin-right: 356px;
 }
 .footer__menu-list {
 display: flex;
 flex-direction: column;
-color: #000;
+list-style: none;
 text-align: center;
+}
+.footer__menu-link_active .footer__menu-link {
+text-decoration: none;
+}
+.footer__menu-link {
+color: #000;
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-list-style: none;
-}
-.footer__menu-link_active {
-text-decoration: none;
-}
-.footer__menu-link {
-text-decoration: underline;
 }
 .footer__social-link {
 display: flex;
 width: 240px;
 height: 48px;
-margin-left: auto;
+margin-left: auto;   
+}
+.footer__social-icon {
+width: 68px;
+height: 48px;
 }
