--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ margin-bottom: 45px;
 .header_logo {
 width: 148px;
 height: 105px;
-padding-bottom: 4px;
+margin-bottom: 4px;
 }
 .header__links-list {
 display: flex;
