--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,9 @@ margin-bottom: 45px;
 .header_logo {
 width: 148px;
 height: 105px;
-margin-bottom: 4px;
+}
+.header__logo-image {
+margin-bottom: 4px;    
 }
 .header__links-list {
 display: flex;
