--- a/styles/style.css
+++ b/styles/style.css
@@ -27,9 +27,7 @@ margin-bottom: 45px;
 .header_logo {
 width: 148px;
 height: 105px;
-}
-.header__logo-image {
-margin-bottom: 4px;    
+margin-top: 5px;
 }
 .header__links-list {
 display: flex;
@@ -48,7 +46,8 @@ color: #000;
 font-family: Raleway, Arial, sans-serif;
 font-size: 18px;
 font-weight: 400;
-line-height: 24.3px;   
+line-height: 24.3px;
+margin-top: 5px; 
 }
 .header__address {
 max-width: 240px;
