--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,9 @@ body {
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
+  width: 100%;
+  max-width: 1440px;
+  margin: auto;
 }
 
 h1,
