--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,3 @@
-
-.header,
-.cover,
-.lots,
-.about,
-.footer {
-width: 100%;
-max-width: 1440px;
-margin: auto;
-}
 .header {
 display: grid;
 grid-template-columns: 1fr min-content 1fr;
@@ -20,23 +10,16 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-display: flex;
-margin-top: 43px;
-margin-bottom: 45px;
 }
 .header_logo {
-width: 148px;
-height: 105px;
-display: grid;
-}
-.header__logo-image {
-width: 140px;
-justify-self: center;
+width: 135px;
 }
 .header__links-list {
 display: flex;
 gap: 32px;
 list-style: none;
+margin-top: 42px;
+margin-bottom: 45px;
 }
 .header__links-list-item {
 text-decoration: underline;
@@ -51,12 +34,12 @@ font-family: Raleway, Arial, sans-serif;
 font-size: 18px;
 font-weight: 400;
 line-height: 24.3px;
-margin-top: 5px; 
+margin-left: 362px;
+margin-top: 7px;
 }
 .header__address {
 max-width: 240px;
 width: fit-content;
-margin-left: 355px;
 }
 .header__links-list-item_no-bullit .header__link {
 list-style: none;
@@ -64,12 +47,12 @@ text-decoration: none;
 }
 .cover {
 background-image: url(../images/cover.jpg);
-padding: 0px 0px 180px 0px;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
 position: relative;
 z-index: -1;
+padding-bottom: 80px;
 }
 .overlay {
 opacity: 0.6;
@@ -94,18 +77,21 @@ flex-direction: column;
 gap: 20px;
 position: relative;
 z-index: 1;
+letter-spacing: 30px;
 }
 .aligned-text {
 text-align: left;
 }
 .aligned-text_center {
 text-align: center;
+line-height: 100%;
 }
 .aligned-text_right {
-text-align: right;
+text-align: end;
+line-height: 100%;
 }
 .letter-spacing-extended {
-letter-spacing: 30px;
+letter-spacing: 60px;
 }
 .no-letter-spacing {
 letter-spacing: 0px;
