--- a/styles/style.css
+++ b/styles/style.css
@@ -34,12 +34,12 @@ font-family: Raleway, Arial, sans-serif;
 font-size: 18px;
 font-weight: 400;
 line-height: 24.3px;
-margin-left: 362px;
-margin-top: 7px;
+margin-top: 5px;
 }
 .header__address {
 max-width: 240px;
 width: fit-content;
+margin-left: 363px;
 }
 .header__links-list-item_no-bullit .header__link {
 list-style: none;
@@ -52,7 +52,10 @@ background-repeat: no-repeat;
 background-position: center;
 position: relative;
 z-index: -1;
-padding-bottom: 80px;
+display: flex;
+flex-direction: column;
+gap: 30px;
+padding-bottom: 50px;
 }
 .overlay {
 opacity: 0.6;
@@ -223,7 +226,7 @@ padding: 0px 50px 180px 50px;
 .about__column {
 display: grid;
 grid-template-columns: 1fr 2fr;
-column-gap: 25px;
+column-gap: 15px;
 }
 .about__title {
 color: #000;
@@ -245,7 +248,7 @@ font-weight: 400;
 line-height: normal;
 display: flex;
 flex-direction: column;
-row-gap: 25px;
+row-gap: 30px;
 }
 .about__logo {
 background-color: #000;
@@ -264,20 +267,21 @@ height: 114px;
 flex-shrink: 0;
 }
 .footer {
-display: grid;
-grid-template-columns: 1fr 149px 1fr;
+display: flex;
 padding: 0px 50px 90px 50px;
+justify-content: space-between;
 }
 .footer_address {
 max-width: 240px;
 width: fit-content;
-margin-right: 356px;
 }
 .footer__menu-list {
 display: flex;
 flex-direction: column;
 list-style: none;
 text-align: center;
+margin-left: 8px;
+margin-top: 5px;
 }
 .footer__menu-link_active .footer__menu-link {
 text-decoration: none;
@@ -292,13 +296,14 @@ line-height: normal;
 }
 .footer__social-list {
 display: flex;
-gap: 32px;
+gap: 30px;
 list-style-type: none;
 width: 240px;
 height: 48px;
-margin-left: auto;   
+margin-right: 8px;
+margin-top: 4px;
 }
 .footer__social-icon {
-width: 68px;
+width: 66px;
 height: 48px;
 }
