--- a/styles/style.css
+++ b/styles/style.css
@@ -26,20 +26,19 @@ text-decoration: underline;
 list-style: circle;
 }
 .address {
-display: flex;
-flex-direction: column;
+display: grid;
+align-self: center;
+justify-self: end;
 font-style: normal;
 color: #000;
 font-family: Raleway, Arial, sans-serif;
 font-size: 18px;
 font-weight: 400;
 line-height: 24.3px;
-margin-top: 5px;
 }
 .header__address {
 max-width: 240px;
 width: fit-content;
-margin-left: 363px;
 }
 .header__links-list-item_no-bullit .header__link {
 list-style: none;
@@ -51,7 +50,7 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
 position: relative;
-z-index: -1;
+z-index: 0;
 display: flex;
 flex-direction: column;
 gap: 30px;
@@ -64,7 +63,7 @@ width: 100%;
 height: 100%;
 position: absolute;
 inset: 0;
-z-index: 0;
+z-index: 1;
 }
 .cover__title {
 color: #FFF;
@@ -79,7 +78,7 @@ display: flex;
 flex-direction: column;
 gap: 20px;
 position: relative;
-z-index: 1;
+z-index: 2;
 letter-spacing: 30px;
 }
 .aligned-text {
@@ -105,7 +104,7 @@ flex-direction: row;
 justify-content: end;
 align-items: center;
 position: relative;
-z-index: 1;
+z-index: 2;
 }
 .cover__description-text {
 word-spacing: 18px;
@@ -166,7 +165,7 @@ line-height: 120%;
 text-decoration-line: underline;
 text-transform: uppercase;
 position: relative;
-z-index: 1;
+z-index: 2;
 }
 .card__text {
 color: #FFF;
@@ -176,7 +175,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 120%;
 position: relative;
-z-index: 1;
+z-index: 2;
 } 
 .lots__card-list {
 position: relative;
@@ -196,7 +195,7 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
 position: relative;
-z-index: -1;
+z-index: 0;
 flex-shrink: 0;
 }
 .card-link {
@@ -222,8 +221,6 @@ margin-left: 40px;
 }
 .about {
 padding: 0px 50px 180px 50px;
-}
-.about__column {
 display: grid;
 grid-template-columns: 1fr 2fr;
 column-gap: 15px;
@@ -268,8 +265,8 @@ flex-shrink: 0;
 }
 .footer {
 display: flex;
-padding: 0px 50px 90px 50px;
 justify-content: space-between;
+padding: 4px 40px 90px 50px;
 }
 .footer_address {
 max-width: 240px;
@@ -280,8 +277,7 @@ display: flex;
 flex-direction: column;
 list-style: none;
 text-align: center;
-margin-left: 8px;
-margin-top: 5px;
+margin-left: 10px;
 }
 .footer__menu-link_active .footer__menu-link {
 text-decoration: none;
@@ -298,10 +294,6 @@ line-height: normal;
 display: flex;
 gap: 30px;
 list-style-type: none;
-width: 240px;
-height: 48px;
-margin-right: 8px;
-margin-top: 4px;
 }
 .footer__social-icon {
 width: 66px;
